--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,7 +1,7 @@
 .hero {
     height: 100vh;
     margin: 0;
-    background-image: url("Images/flag.jpg");
+    background-image: url("/Images/flag.jpg");
     background-size: cover;
     background-position: center;
     font-family: Arial, sans-serif;
